# GalaxyGame

./: CMakeLists.txt  Makefile
cmake/modules/: FindSfml.cmake
include/: Benchmark.hpp  CircleElement.hpp  Constants.hpp  Game.hpp  GenerateRandomNumbers.hpp  Inputs.hpp  Window.h  World.hpp  add_include_path.cmake  logger.h
src/: Benchmark.cpp  CMakeLists.txt  CircleElement.cpp  Constants.cpp  Game.cpp  GenerateRandomNumbers.cpp  Inputs.cpp  Window.cpp  World.cpp  main.cpp
tests/: basic_tests.cc  gtests.cmake
